[package]
name = "embedded-dsp"
version = "0.1.0"
authors = ["Matthew Meyer <mtthw.meyer@gmail.com>"]
edition = "2018"
resolver = "2"


[dependencies]
log = "0.4.11"
micromath = "1.1.1"
ordered-float = { version = "2.1.1", default-features = false }

[dev-dependencies]
rand = "0.8.3"
spectrum-analyzer = "0.5.0"
audio-visualizer = "0.2.2"
